objects/Test_Case__c.object
<CustomObject>
    <description>Test Case contains a brief overview of Release, Capability, User Stories, estimation for Writing and Executing Test Steps.</description>
    <fields>
        <fullName>Actual_Time_Spent_ExecutingTestStep__c</fullName>
        <description>Actual time spent in executing Test Step</description>
        <label>Actual Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Time_Spent_WritingTestStep__c</fullName>
        <description>Actual time spent in writing the Test Step</description>
        <label>Actual Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_ExecutingTestStep__c</fullName>
        <description>Budget for executing the Test Step</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_WritingTestStep__c</fullName>
        <description>Budget to write the Test Steps in hours</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores global functional domain of application</description>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Input__c</fullName>
        <label>Data Input</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Data_Output__c</fullName>
        <label>Data Output</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Store brief description of the Test Case</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EAC_ExecutingTestStep__c</fullName>
        <description>Estimate at complete for executing Test Step</description>
        <label>EAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAC_WritingTestStep__c</fullName>
        <description>Estimate at completion for writing Test Step</description>
        <label>EAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETC_ExecutingTestStep__c</fullName>
        <description>Estimate to complete for executing Test Step</description>
        <label>ETC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETC_WritingTestStep__c</fullName>
        <description>Estimate to complete writing Test Step</description>
        <label>ETC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_ExecutingTestStep__c</fullName>
        <description>Earned value for executing Test Step</description>
        <label>EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_WritingTestStep__c</fullName>
        <description>Earned value for writing Test Step</description>
        <label>EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_WritingTestStep__c</fullName>
        <description>Name of the person who writes the Test Steps</description>
        <label>Nom</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Stores Releases of given application</description>
        <label>Release</label>
        <referenceTo>Project_Release__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_ExecutingTestStep__c</fullName>
        <description>Status of execution</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Yet Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>UserStory__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>